@@ -1,7 +1,7 @@
 package omnivoxel.server.client.chunk.worldDataService.density.functions;
 
 import omnivoxel.server.client.chunk.worldDataService.Function;
-import omnivoxel.server.client.chunk.worldDataService.ServerWorldDataService;
+import omnivoxel.server.client.chunk.worldDataService.WorldGenerator;
 import omnivoxel.server.client.chunk.worldDataService.density.DensityFunction;
 import omnivoxel.util.game.nodes.GameNode;
 import omnivoxel.util.game.nodes.ObjectGameNode;
@@ -14,7 +14,7 @@ public class SqueezeDensityFunction extends DensityFunction {
         super(args, seed);
 
         if (args instanceof ObjectGameNode objectGameNode) {
-            this.arg = ServerWorldDataService.getDensityFunction(objectGameNode.object().get("arg"), seed);
+            this.arg = WorldGenerator.getDensityFunction(objectGameNode.object().get("arg"), seed);
         } else {
             throw new IllegalArgumentException("GameNode must be an ObjectGameNode, not " + args.getClass());
         }
@@ -22,7 +22,7 @@ public class SqueezeDensityFunction extends DensityFunction {
 
     @Override
     public double evaluate(double x, double y, double z) {
-        double s = Math.max(-1.0f, Math.min(1.0f, arg.evaluate(x, y, z)));
+        double s = Math.clamp(arg.evaluate(x, y, z), -1.0f, 1.0f);
         return (s / 2.0f) - (s * s * s) / 24.0f;
     }
 }
